src/main/java/com/dbms/grammar/SqlParser.java
/* Generated By:JavaCC: Do not edit this line. SqlParser.java */
    package com.dbms.grammar;

    import java.util.ArrayList;
    import java.util.LinkedHashMap;
    import java.util.Map;

    import com.dbms.backend.*;

    public class SqlParser implements SqlParserConstants {
        void run() throws Exception {
            while (true) {
                try {
                    parse();
                } catch(Throwable e) {
                    e.printStackTrace();
                }
            }
        }

//____________________________________________Here main methods____________________________________________
  final public void parse() throws ParseException, Exception {
    if (jj_2_1(2)) {
      parseCreateDatabase();
    } else if (jj_2_2(2)) {
      parseUseDatabase();
    } else if (jj_2_3(2)) {
      parseCreateTable();
    } else if (jj_2_4(2)) {
      parseShowCreateTable();
    } else if (jj_2_5(2)) {
      parseInsertIntoTable();
    } else if (jj_2_6(2)) {
      parseSelectFromTable();
    } else if (jj_2_7(2)) {
      parseUpdate();
    } else if (jj_2_8(2)) {
      parseDelete();
    } else if (jj_2_9(2)) {
      parseExit();
    } else if (jj_2_10(2)) {
      jj_consume_token(0);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void parseCreateDatabase() throws ParseException, Exception {
    Token name;
    jj_consume_token(CREATE);
    jj_consume_token(DATABASE);
    name = jj_consume_token(STRING_LITERAL);
    jj_consume_token(SEMICOLON);
        DataBases.createDataBase(name.image);
    if (jj_2_11(2)) {
      parse();
    } else {
      ;
    }
  }

  final public void parseUseDatabase() throws ParseException, Exception {
    Token name;
    jj_consume_token(USE);
    jj_consume_token(DATABASE);
    name = jj_consume_token(STRING_LITERAL);
    jj_consume_token(SEMICOLON);
        DataBases.useDataBase(name.image);
    if (jj_2_12(2)) {
      parse();
    } else {
      ;
    }
  }

  final public ArgsGuard parseCreateTable() throws ParseException, Exception {
    Token name;

    ArgsGuard args = new ArgsGuard();
    jj_consume_token(CREATE);
    jj_consume_token(TABLE);
    name = jj_consume_token(STRING_LITERAL);
    jj_consume_token(OPEN_BRACKET);
        DataBases.getCurrentDataBase().createTable(
            new Table(
                new TableHeader(
                    name.image,
                    getFields(args)
                )
            )
        );
    jj_consume_token(CLOSE_BRACKET);
    jj_consume_token(SEMICOLON);
        args.setName(name.image);

        {if (true) return args;}
    throw new Error("Missing return statement in function");
  }

  final public void parseShowCreateTable() throws ParseException, Exception {
    Token name;
    jj_consume_token(SHOW);
    jj_consume_token(CREATE);
    jj_consume_token(TABLE);
    name = jj_consume_token(STRING_LITERAL);
    jj_consume_token(SEMICOLON);
        System.out.println(
            DataBases.getCurrentDataBase().showCreate(name.image)
        );
    if (jj_2_13(2)) {
      parse();
    } else {
      ;
    }
  }

  final public ArgsGuard parseInsertIntoTable() throws ParseException, Exception {
    Token name;

    ArrayList<String> insertableColumns = new ArrayList<String>();
    ArrayList<String> insertableValues = new ArrayList<String>();

    ArgsGuard args = new ArgsGuard();
    jj_consume_token(INSERT);
    if (jj_2_14(2)) {
      jj_consume_token(INTO);
    } else {
      ;
    }
    name = jj_consume_token(STRING_LITERAL);
    jj_consume_token(OPEN_BRACKET);
    insertableColumns = getColumns();
    jj_consume_token(CLOSE_BRACKET);
    jj_consume_token(VALUES);
    jj_consume_token(OPEN_BRACKET);
    insertableValues = getInsertableValues();
    jj_consume_token(CLOSE_BRACKET);
    jj_consume_token(SEMICOLON);
        args.setName(name.image);
        args.setInsertableColumns(insertableColumns);
        args.setInsertableValues(insertableValues);

        {if (true) return args;}
    throw new Error("Missing return statement in function");
  }

  final public ArgsGuard parseSelectFromTable() throws ParseException, Exception {
    Token name, limit = null, offset = null, star = null;

    ArrayList<String> insertableColumns = new ArrayList<String>();

    ArgsGuard args = new ArgsGuard();
    jj_consume_token(SELECT);
    insertableColumns = getColumns();
    if (jj_2_15(2)) {
      star = jj_consume_token(STAR);
    } else {
      ;
    }
    jj_consume_token(FROM);
    name = jj_consume_token(STRING_LITERAL);
    if (jj_2_16(2)) {
      jj_consume_token(LIMIT);
      limit = jj_consume_token(STRING_LITERAL);
    } else {
      ;
    }
    if (jj_2_17(2)) {
      jj_consume_token(OFFSET);
      offset = jj_consume_token(STRING_LITERAL);
    } else {
      ;
    }
    jj_consume_token(SEMICOLON);
        args.setName(name.image);
        args.setInsertableColumns(insertableColumns);

        if (limit != null)
            args.setLimit(Integer.parseInt(limit.image));

        if (offset != null)
            args.setOffset(Integer.parseInt(offset.image));

        {if (true) return args;}
    throw new Error("Missing return statement in function");
  }

  final public ArgsGuard parseUpdate() throws ParseException, Exception {
    Token name, math, sign, updatableColumn, updatableValue,
     compareColumn = null, compareSign = null, compareValue = null, comparePredicat = null;

    ArrayList<String> updatableColumns = new ArrayList<String>();
    ArrayList<String> updatableValues = new ArrayList<String>();

    ArrayList<String> compareColumns = new ArrayList<String>();
    ArrayList<String> compareSigns = new ArrayList<String>();
    ArrayList<String> compareValues = new ArrayList<String>();
    ArrayList<String> comparePredicats = new ArrayList<String>();

    ArgsGuard args = new ArgsGuard();
    jj_consume_token(UPDATE);
    name = jj_consume_token(STRING_LITERAL);
    jj_consume_token(SET);
    updatableColumn = jj_consume_token(STRING_LITERAL);
    jj_consume_token(COMPARE);
    updatableValue = jj_consume_token(STRING_LITERAL);
    if (jj_2_18(2)) {
      sign = jj_consume_token(MATH_OPERATION_LITEARAL);
      updatableValue.image += sign.image;
    } else {
      ;
    }
        updatableColumns.add(updatableColumn.image);
        math = updatableValue;
        //updatableValues.add(updatableValue.image);

    label_1:
    while (true) {
      if (jj_2_19(2)) {
        ;
      } else {
        break label_1;
      }
      updatableValue = jj_consume_token(STRING_LITERAL);
      if (jj_2_20(2)) {
        sign = jj_consume_token(MATH_OPERATION_LITEARAL);
              updatableValue.image += sign.image;
      } else {
        ;
      }
                math.image += updatableValue.image;
                //updatableValues.add(updatableValue.image);

    }
    label_2:
    while (true) {
      if (jj_2_21(2)) {
        ;
      } else {
        break label_2;
      }
      jj_consume_token(COMMA);
      updatableColumn = jj_consume_token(STRING_LITERAL);
      jj_consume_token(COMPARE);
      updatableValue = jj_consume_token(STRING_LITERAL);
      if (jj_2_22(2)) {
        sign = jj_consume_token(MATH_OPERATION_LITEARAL);
         updatableValue.image += sign.image;
      } else {
        ;
      }
            updatableValues.add(math.image);
            math.image = updatableValue.image;
            updatableColumns.add(updatableColumn.image);
            //updatableValues.add(updatableValue.image);

      label_3:
      while (true) {
        if (jj_2_23(2)) {
          ;
        } else {
          break label_3;
        }
        updatableValue = jj_consume_token(STRING_LITERAL);
        if (jj_2_24(2)) {
          sign = jj_consume_token(MATH_OPERATION_LITEARAL);
                      updatableValue.image += sign.image;
        } else {
          ;
        }
                        math.image += updatableValue.image;
                        //updatableValues.add(updatableValue.image);

      }
    }
     updatableValues.add(math.image);
    if (jj_2_30(2)) {
      jj_consume_token(WHERE);
      updatableValue = jj_consume_token(STRING_LITERAL);
      if (jj_2_25(2)) {
        sign = jj_consume_token(COMPARE);
         updatableValue.image += sign.image;
      } else {
        ;
      }
      if (jj_2_26(2)) {
        sign = jj_consume_token(MATH_OPERATION_LITEARAL);
         updatableValue.image += sign.image;
      } else {
        ;
      }
         math = updatableValue;
      label_4:
      while (true) {
        if (jj_2_27(2)) {
          ;
        } else {
          break label_4;
        }
        updatableValue = jj_consume_token(STRING_LITERAL);
        if (jj_2_28(2)) {
          sign = jj_consume_token(COMPARE);
             updatableValue.image += sign.image;
        } else {
          ;
        }
        if (jj_2_29(2)) {
          sign = jj_consume_token(MATH_OPERATION_LITEARAL);
              updatableValue.image += sign.image;
        } else {
          ;
        }
                math.image += updatableValue.image;
                //updatableValues.add(updatableValue.image);

      }
         compareValues.add(math.image);
    } else {
      ;
    }
    jj_consume_token(SEMICOLON);
        args.setName(name.image);
        args.setUpdatableColumns(updatableColumns);
        args.setUpdatableValues(updatableValues);

        args.setCompareColumns(compareColumns);
        args.setCompareSigns(compareSigns);
        args.setCompareValues(compareValues);
        args.setComparePredicats(comparePredicats);

        {if (true) return args;}
    throw new Error("Missing return statement in function");
  }

  final public ArgsGuard parseDelete() throws ParseException, Exception {
    Token name, math, sign,  updatableValue, compareColumn = null, compareSign = null, compareValue = null, comparePredicat = null, star = null;

    ArrayList<String> compareColumns = new ArrayList<String>();
    ArrayList<String> compareSigns = new ArrayList<String>();
    ArrayList<String> compareValues = new ArrayList<String>();
    ArrayList<String> comparePredicats = new ArrayList<String>();

    ArgsGuard args = new ArgsGuard();
    jj_consume_token(DELETE);
    if (jj_2_31(2)) {
      star = jj_consume_token(STAR);
    } else {
      ;
    }
    jj_consume_token(FROM);
    name = jj_consume_token(STRING_LITERAL);
    if (jj_2_37(2)) {
      jj_consume_token(WHERE);
      updatableValue = jj_consume_token(STRING_LITERAL);
             math = updatableValue;
      if (jj_2_32(2)) {
        sign = jj_consume_token(COMPARE);
             updatableValue.image += sign.image;
      } else {
        ;
      }
      if (jj_2_33(2)) {
        sign = jj_consume_token(MATH_OPERATION_LITEARAL);
             updatableValue.image += sign.image;
      } else {
        ;
      }
             math.image = updatableValue.image;
      label_5:
      while (true) {
        if (jj_2_34(2)) {
          ;
        } else {
          break label_5;
        }
        updatableValue = jj_consume_token(STRING_LITERAL);
        if (jj_2_35(2)) {
          sign = jj_consume_token(COMPARE);
                                 updatableValue.image += sign.image;
        } else {
          ;
        }
        if (jj_2_36(2)) {
          sign = jj_consume_token(MATH_OPERATION_LITEARAL);
                                  updatableValue.image += sign.image;
        } else {
          ;
        }
                                    math.image += updatableValue.image;
                                    //updatableValues.add(updatableValue.image);

      }
             compareValues.add(math.image);
    } else {
      ;
    }
    jj_consume_token(SEMICOLON);
        args.setName(name.image);
        args.setCompareColumns(compareColumns);
        args.setCompareSigns(compareSigns);
        args.setCompareValues(compareValues);
        args.setComparePredicats(comparePredicats);

        {if (true) return args;}
    throw new Error("Missing return statement in function");
  }

  final public Token parseExit() throws ParseException {
    Token command;
    command = jj_consume_token(EXIT);
    jj_consume_token(SEMICOLON);
        DataBases.exit();
        {if (true) return command;}
    throw new Error("Missing return statement in function");
  }

//____________________________________________Here helper methods____________________________________________
  final public ArrayList<String> getColumns() throws ParseException {
    Token columnName;

    ArrayList<String> insertableColumns = new ArrayList<String>();
    columnName = jj_consume_token(STRING_LITERAL);
     insertableColumns.add(columnName.image);
    label_6:
    while (true) {
      if (jj_2_38(2)) {
        ;
      } else {
        break label_6;
      }
      jj_consume_token(COMMA);
      columnName = jj_consume_token(STRING_LITERAL);
            insertableColumns.add(columnName.image);
    }
     {if (true) return insertableColumns;}
    throw new Error("Missing return statement in function");
  }

  final public ArrayList<String> getInsertableValues() throws ParseException {
    Token value;

    ArrayList<String> values = new ArrayList<String>();
    jj_consume_token(SINGLE_MARK);
    value = jj_consume_token(STRING_LITERAL);
    jj_consume_token(SINGLE_MARK);
     values.add(value.image);
    label_7:
    while (true) {
      if (jj_2_39(2)) {
        ;
      } else {
        break label_7;
      }
      jj_consume_token(COMMA);
      jj_consume_token(SINGLE_MARK);
      value = jj_consume_token(STRING_LITERAL);
      jj_consume_token(SINGLE_MARK);
            values.add(value.image);
    }
     {if (true) return values;}
    throw new Error("Missing return statement in function");
  }

  final public Map<String, TypeDescription> getFields(ArgsGuard args) throws ParseException {
    Token name;

    Map<String, TypeDescription> fields = new LinkedHashMap<String, TypeDescription>();
    name = jj_consume_token(STRING_LITERAL);
        fields.put(name.image, getTypeDescription());
    if (jj_2_40(2)) {
      jj_consume_token(COMMA);
      getFields(args);
    } else {
      ;
    }
     {if (true) return fields;}
    throw new Error("Missing return statement in function");
  }

  final public TypeDescription getTypeDescription() throws ParseException {
    Token type, length = null;

    TypeDescription typeDescription;
    type = jj_consume_token(STRING_LITERAL);
    if (jj_2_41(2)) {
      jj_consume_token(OPEN_BRACKET);
      length = jj_consume_token(STRING_LITERAL);
      jj_consume_token(CLOSE_BRACKET);
    } else {
      ;
    }
        typeDescription = new TypeDescription(type.image);

        if (length != null)
            typeDescription.setLength(length.image);

        {if (true) return typeDescription;}
    throw new Error("Missing return statement in function");
  }

  private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  private boolean jj_2_2(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  private boolean jj_2_3(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_3(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  private boolean jj_2_4(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_4(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  private boolean jj_2_5(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_5(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  private boolean jj_2_6(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_6(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(5, xla); }
  }

  private boolean jj_2_7(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_7(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(6, xla); }
  }

  private boolean jj_2_8(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_8(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(7, xla); }
  }

  private boolean jj_2_9(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_9(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(8, xla); }
  }

  private boolean jj_2_10(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_10(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(9, xla); }
  }

  private boolean jj_2_11(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_11(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(10, xla); }
  }

  private boolean jj_2_12(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_12(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(11, xla); }
  }

  private boolean jj_2_13(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_13(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(12, xla); }
  }

  private boolean jj_2_14(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_14(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(13, xla); }
  }

  private boolean jj_2_15(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_15(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(14, xla); }
  }

  private boolean jj_2_16(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_16(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(15, xla); }
  }

  private boolean jj_2_17(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_17(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(16, xla); }
  }

  private boolean jj_2_18(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_18(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(17, xla); }
  }

  private boolean jj_2_19(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_19(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(18, xla); }
  }

  private boolean jj_2_20(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_20(); }
